Finalisation du dashboard admin
- Mise en place de la page des contacts utiles

--- a/templates/dashboard/admin/ajax/forms/AddHorseman.html.twig
+++ b/templates/dashboard/admin/ajax/forms/AddHorseman.html.twig
@@ -1,7 +1,5 @@
-<div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1">
+<div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="horsemanForm" data-url="{{ path('reload-horseman-form') }}">
     {{form_start(addHorsemanForm)}}
-
-    <div id="flashMessagesHorseman"></div>
 
     <div class="row">
         <div class="input-field col xl6 l6 m12 s12">
