--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <div class="row">
-        <div class="col s12 m6 l6 xl4 offset-l3 offset-xl4 ">
+        <div class="col s12 m8 l6 xl4 offset-m2 offset-l3 offset-xl4 ">
             <div class="card">
                 <div class="card-content">
                     <div class="center-align">
@@ -61,57 +61,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script>
-        resetPassword();
-
-        // Soumission du formulaire de reset de mot de passe en ajax
-        function resetPassword() {
-            // Récupération du formulaire
-            $('form[name="reset_password"]').on('submit', function(e) {
-
-                // Bloquage de l'action initial
-                e.preventDefault();
-
-                // Affichage de la barre de chargement
-                $('.progress').show();
-
-                // Récupération du formulaire
-                var $form = $(this);
-
-                // Récupération de l'url de soumission
-                var url = $('#resetPassword').attr('data-url');
-
-                // Fonction ajax
-                $.ajax({
-                    type:'POST',
-                    url: url,
-                    data: $form.serialize(),
-                    success: function (data) {
-                        // Construction du html pour le message flash
-                        var success = '<div class="card-panel green accent-4">'+ data +'</div>';
-                        // Ajout du message flash
-                        $('#flashMessages').html(success);
-
-                        // Retrait de la barre de chargement
-                        $('.progress').hide();
-                    },
-                    error: function (jqxhr) {
-                        // Construction du html pour le message flash
-                        var error = '<div class="card-panel deep-orange accent-4">'+ jqxhr.responseText +'</div>';
-                        // ajoute le message flash dans la div dédiée
-                        $('#flashMessages').html(error);
-
-                        // Retrait de la barre de chargement
-                        $('.progress').hide();
-
-                        // Efface le message après 5 secondes
-                        function removeFlashMsg(){
-                            $('.card-panel').replaceWith("");
-                        }
-                        setTimeout(removeFlashMsg, 5000);
-                    }
-                })
-            });
-        }
-    </script>
+    <script type="text/javascript" src="{{ asset('build/js/security/login.js') }}"></script>
 {%endblock %}
