--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
         <!-- Custom -->
-        <link rel="stylesheet" href="{{ asset('../public/build/css/main.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/css/main.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
         {% block stylesheets %}
         {% endblock %}
     </head>
