--- a/templates/dashboard/admin/tables/horses.html.twig
+++ b/templates/dashboard/admin/tables/horses.html.twig
@@ -2,13 +2,13 @@
     <div class="table-responsive-vertical">
         <table id="table" class="table table-hover table-mc-light-green">
             <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Vaccination</th>
-                    <th>Vermifigation</th>
-                    <th>Couvertures</th>
-                    <th>Propriétaire</th>
-                </tr>
+            <tr>
+                <th>Nom</th>
+                <th>Vaccination</th>
+                <th>Vermifigation</th>
+                <th>Couvertures</th>
+                <th>Propriétaire</th>
+            </tr>
             </thead>
             <tbody>
             {% for horse in paginationHorses['horses']  %}
@@ -16,7 +16,13 @@
                     <td data-title="Nom">{{ horse.name }}</td>
                     <td data-title="Vaccination">{{ horse.vaccinationDate|date('d/m/Y') }}</td>
                     <td data-title="Vermifugation">{{ horse.dewormingDate|date('d/m/Y') }}</td>
-                    <td data-title="Couvertures">{{ horse.blanketsOption }} Oui</td>
+                    <td data-title="Couvertures">
+                        {% if horse.blanketsOption is same as(false) %}
+                            Non
+                        {% else %}
+                            Oui
+                        {% endif %}
+                    </td>
                     <td data-title="Propriétaire">{{ horse.user.completeName }}</td>
                 </tr>
             {% endfor %}
@@ -24,6 +30,6 @@
         </table>
     </div>
 
-{{ include('dashboard/admin/ajax/pagination/horses.html.twig') }}
+    {{ include('dashboard/admin/ajax/pagination/horses.html.twig') }}
 
 </div>
