--- a/templates/dashboard/admin/tables/owners.html.twig
+++ b/templates/dashboard/admin/tables/owners.html.twig
@@ -1,15 +1,15 @@
 <div id="table-owners" >
-    <ul class="collection with-header col xl12 l12 m12 s12">
-        <li class="collection-header"><h5>Propriétaires</h5></li>
+    <ul class="collection with-header owners">
+        <li class="collection-header"><h5>Propriétaires & cavaliers</h5></li>
 
         {% for owner in paginationOwners['owners']  %}
             {% if owner.name is empty %}
                 <li class="collection-item">{{ owner.completeName }}
-                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">0{{ owner.phone|phone }}</a>
+                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
                 </li>
             {% else %}
                 <li class="collection-item">{{ owner.completeName }} ({{ owner.name }})
-                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">0{{ owner.phone|phone }}</a>
+                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
                 </li>
             {% endif %}
         {% endfor %}
